First Due Date Idea

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -15,10 +15,11 @@
         <include
             layout="@layout/main_toolbar"/>
 
+<!--        Case ID-->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/til_name"
+            android:id="@+id/til_case_id"
             android:paddingHorizontal="13dp"
             app:endIconMode="clear_text"
             app:helperText="Mandatory*"
@@ -29,11 +30,50 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/et_name"
-                android:hint="@string/enter_name"
+                android:id="@+id/et_case_id"
+                android:hint="@string/case_id"
                 android:imeOptions="actionNext"
                 android:inputType="textPersonName"/>
         </com.google.android.material.textfield.TextInputLayout>
+
+<!--        Ref number-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/til_ref_number"
+            android:paddingHorizontal="13dp"
+            app:endIconMode="clear_text"
+            app:helperText="Mandatory*"
+            app:helperTextTextColor="@color/teal_700"
+            app:startIconDrawable="@drawable/ic_name"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/et_ref_number"
+                android:hint="@string/reference_number"
+                android:imeOptions="actionNext"
+                android:inputType="textPersonName"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Due Date"
+            android:textColor="@color/black"
+            android:layout_marginTop="8dp"
+            android:paddingHorizontal="18dp"/>
+        <Button
+            android:id="@+id/due_date_picker_button"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            style="?android:spinnerStyle"
+            android:textColor="@color/black"
+            android:text="JAN 01 2021"
+            android:onClick="openDatePicker"/>
+
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
