--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <include
@@ -48,7 +48,8 @@
                     android:id="@+id/et_case_id"
                     android:hint="@string/case_id"
                     android:imeOptions="actionNext"
-                    android:inputType="textPersonName"/>
+                    android:inputType="textPersonName"
+                    tools:ignore="Autofill" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <!--        Ref number-->
@@ -111,7 +112,12 @@
                     android:id="@+id/et_description"
                     android:hint="@string/description"
                     android:imeOptions="actionNext"
-                    android:inputType="textPersonName"/>
+                    android:inputType="textMultiLine"
+                    android:minLines="1"
+                    android:gravity="left|top"
+                    android:maxLines="10"
+                    android:scrollbars="vertical"
+                    android:lines="8"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 <!--            Insurer Details-->
@@ -346,7 +352,12 @@
                     android:id="@+id/et_i_questions"
                     android:hint="Insurer Questions"
                     android:imeOptions="actionNext"
-                    android:inputType="text"/>
+                    android:inputType="textMultiLine"
+                    android:minLines="1"
+                    android:gravity="left|top"
+                    android:maxLines="10"
+                    android:scrollbars="vertical"
+                    android:lines="8"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -380,7 +391,12 @@
                     android:id="@+id/et_tp_name"
                     android:hint="@string/insure_name"
                     android:imeOptions="actionNext"
-                    android:inputType="textPersonName"/>
+                    android:inputType="textMultiLine"
+                    android:minLines="1"
+                    android:gravity="left|top"
+                    android:maxLines="10"
+                    android:scrollbars="vertical"
+                    android:lines="8"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -555,12 +571,13 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
                 <EditText
+                    android:id="@+id/et_tp_landmark"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/et_tp_landmark"
                     android:hint="@string/landmark"
                     android:imeOptions="actionNext"
-                    android:inputType="text"/>
+                    android:inputType="text"
+                    tools:ignore="Autofill" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -580,9 +597,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:id="@+id/et_tp_questions"
-                    android:hint="Insurer Questions"
+                    android:hint="Thirdparty Questions"
                     android:imeOptions="actionNext"
-                    android:inputType="text"/>
+                    android:inputType="textMultiLine"
+                    android:minLines="1"
+                    android:gravity="left|top"
+                    android:maxLines="10"
+                    android:scrollbars="vertical"
+                    android:lines="8"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 
