Card view edit button intent to form page done

--- a/app/src/main/res/layout/activity_card_view_card_design.xml
+++ b/app/src/main/res/layout/activity_card_view_card_design.xml
@@ -47,12 +47,12 @@
                     android:layout_height="wrap_content">
 
                     <ImageButton
+                        android:id="@+id/btn_edit2"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_alignParentRight="true"
-                        android:src="@drawable/ic_pencil"
                         android:backgroundTint="#B3E5FC"
-                        android:id="@+id/btn_edit"/>
+                        android:src="@drawable/ic_pencil" />
                 </RelativeLayout>
 
             </LinearLayout>
