all basic data for the edit page is loaded to the form.. (success) not completely

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,8 +99,9 @@
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_alignParentRight="true"
-                            android:src="@drawable/ic_eye"
-                            android:backgroundTint="#A5D6A7"/>
+                            android:backgroundTint="#A5D6A7"
+                            android:id="@+id/btn_view"
+                            android:src="@drawable/ic_eye" />
                     </RelativeLayout>
 
 
