--- a/app/src/main/res/layout/activity_editpage.xml
+++ b/app/src/main/res/layout/activity_editpage.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CardDesignActivity">
+    tools:context=".EditPage.EditpageActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,19 +18,23 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/case_recyclerview"
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
-            </androidx.recyclerview.widget.RecyclerView>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/editpage_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </androidx.core.widget.NestedScrollView>
 
 
         </RelativeLayout>
     </LinearLayout>
 
-    <!--    //Drawer Layout-->
+
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="match_parent"
@@ -40,5 +44,6 @@
         <include layout="@layout/main_nav_drawer" />
 
     </RelativeLayout>
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
