Case detials put and search case in case view page

--- a/app/src/main/res/layout/activity_card_design.xml
+++ b/app/src/main/res/layout/activity_card_design.xml
@@ -16,18 +16,42 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/case_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             </androidx.recyclerview.widget.RecyclerView>
 
 
         </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|center_horizontal"
+            android:id="@+id/loading_layout"
+            android:visibility="gone">
+            <ProgressBar
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/progress_bar"
+                android:visibility="visible"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/progress_bar"
+                android:text="Loading..."
+                android:textColor="#26A69A"
+                android:textSize="25sp"
+                android:textStyle="bold"/>
+        </RelativeLayout>
+
+
+
+
     </LinearLayout>
 
     <!--    //Drawer Layout-->
