--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="120dp"
             android:layout_marginTop="16dp"
-            android:src="@drawable/vc_logo"/>
+            android:src="@drawable/veri"/>
         
         <View
             android:layout_width="match_parent"
